--- a/index.html
+++ b/index.html
@@ -11,43 +11,53 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@400;800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li>
-            <a href="./studio.html" target="_blank" class="link current"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a href="./portfolio.html" target="_blank" class="link"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="./contacts.html" target="_blank" class="link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo">
+            <span class="logo-accent">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li>
+              <a href="./studio.html" target="_blank" class="link current"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="./portfolio.html" target="_blank" class="link"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="./contacts.html" target="_blank" class="link"
+                >Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address>
-        <ul class="contact-nav list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+        <address>
+          <ul class="contact-nav list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Hero -->
