--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container header-container">
         <nav>
           <a href="./index.html" class="logo">
             <span class="logo-accent">Web</span>Studio</a
@@ -40,7 +40,8 @@
             </li>
             <li>
               <a href="./contacts.html" target="_blank" class="link"
-                >Contacts</a>
+                >Contacts</a
+              >
             </li>
           </ul>
         </nav>
@@ -62,131 +63,139 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
 
       <!-- our features -->
       <section class="features-section">
-        <h2 class="visually-hidden">our features</h2>
-        <ul class="features-list list">
-          <li>
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-descr">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-descr">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-descr">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-descr">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">our features</h2>
+          <ul class="features-list list">
+            <li>
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-descr">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-descr">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-descr">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-descr">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- what are we doing -->
       <section class="work-section">
-        <h2 class="work-title">What are we doing</h2>
-        <ul class="work-list list">
-          <li>
-            <img
-              src="./images/mac.jpg"
-              alt="Computer Mac"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/phone.jpg"
-              alt="Phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/hand.jpg"
-              alt="Hand with phone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title">What are we doing</h2>
+          <ul class="work-list list">
+            <li>
+              <img class="work-photo"
+                src="./images/mac.jpg"
+                alt="Computer Mac"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img class="work-photo"
+                src="./images/phone.jpg"
+                alt="Phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img class="work-photo"
+                src="./images/hand.jpg"
+                alt="Hand with phone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- our team -->
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-list-item">
-            <img
-              src="./images/mark.jpg"
-              alt="Photo our product designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-descr">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/tom.jpg"
-              alt="Photo of our Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-descr">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/camila.jpg"
-              alt="Photo of our Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-descr">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/daniel.jpg"
-              alt="Photo of our UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-descr">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-list-item">
+              <img class="team-photo"
+                src="./images/mark.jpg"
+                alt="Photo our product designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle">Mark Guerrero</h3>
+              <p class="team-descr">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img class="team-photo"
+                src="./images/tom.jpg"
+                alt="Photo of our Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle">Tom Ford</h3>
+              <p class="team-descr">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img class="team-photo"
+                src="./images/camila.jpg"
+                alt="Photo of our Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle">Camila Garcia</h3>
+              <p class="team-descr">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img class="team-photo"
+                src="./images/daniel.jpg"
+                alt="Photo of our UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle">Daniel Wilson</h3>
+              <p class="team-descr">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
