--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
             <span class="logo-accent">Web</span>Studio</a
           >
           <ul class="site-nav list">
-            <li>
-              <a href="./studio.html" target="_blank" class="link current"
+            <li class="site-nav-item">
+              <a href="./studio.html" target="_blank" class="site-link link current"
                 >Studio</a
               >
             </li>
-            <li>
-              <a href="./portfolio.html" target="_blank" class="link"
+            <li class="site-nav-item">
+              <a href="./portfolio.html" target="_blank" class="site-link link"
                 >Portfolio</a
               >
             </li>
-            <li>
-              <a href="./contacts.html" target="_blank" class="link"
+            <li class="site-nav-item">
+              <a href="./contacts.html" target="_blank" class="site-link link"
                 >Contacts</a
               >
             </li>
@@ -48,12 +48,12 @@
 
         <address>
           <ul class="contact-nav list">
-            <li>
+            <li class="contact-nav-item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="contact-nav-item">
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
@@ -70,7 +70,7 @@
       </section>
 
       <!-- our features -->
-      <section class="features-section">
+      <section class="features-section section">
         <div class="container">
           <h2 class="visually-hidden">our features</h2>
           <ul class="features-list list">
@@ -107,7 +107,7 @@
       </section>
 
       <!-- what are we doing -->
-      <section class="work-section">
+      <section class="work-section section">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-list list">
@@ -140,7 +140,7 @@
       </section>
 
       <!-- our team -->
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
