--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <div class="container header-container">
-        <nav>
+        <nav class="header-nav">
           <a href="./index.html" class="logo">
             <span class="logo-accent">Web</span>Studio</a
           >
@@ -46,7 +46,7 @@
           </ul>
         </nav>
 
-        <address>
+        <address class="contact">
           <ul class="contact-nav list">
             <li class="contact-nav-item">
               <a href="mailto:info@devstudio.com" class="link"
@@ -64,7 +64,7 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">Effective Solutions<br>for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
       </section>
