--- a/portfolio.html
+++ b/portfolio.html
@@ -15,37 +15,43 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" target="_blank" class="link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" target="_blank" class="link current"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="./contacts.html" target="_blank" class="link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo">
+            <span class="logo-accent">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li class="site-nav-item">
+              <a href="./studio.html" target="_blank" class="site-link link current"
+                >Studio</a
+              >
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" target="_blank" class="site-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="site-nav-item">
+              <a href="./contacts.html" target="_blank" class="site-link link"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
 
-      <address>
-        <ul class="contact-nav list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+        <address class="contact">
+          <ul class="contact-nav list">
+            <li class="contact-nav-item">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-nav-item">
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="exampl-work">
