--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a href="./studio.html" target="_blank" class="site-link link current"
+              <a
+                href="./studio.html"
+                target="_blank"
+                class="site-link link current"
                 >Studio</a
               >
             </li>
@@ -64,7 +67,7 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions<br>for Your Business</h1>
+          <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
       </section>
@@ -74,28 +77,28 @@
         <div class="container">
           <h2 class="visually-hidden">our features</h2>
           <ul class="features-list list">
-            <li>
+            <li class="feature-item">
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-descr">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-descr">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-descr">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-descr">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,28 +114,25 @@
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-list list">
-            <li>
-              <img class="work-photo"
+            <li class="work-item">
+              <img
+                class="work-photo"
                 src="./images/mac.jpg"
                 alt="Computer Mac"
-                width="360"
-                height="300"
               />
             </li>
-            <li>
-              <img class="work-photo"
+            <li class="work-item">
+              <img
+                class="work-photo"
                 src="./images/phone.jpg"
                 alt="Phone"
-                width="360"
-                height="300"
               />
             </li>
-            <li>
-              <img class="work-photo"
+            <li class="work-item">
+              <img
+                class="work-photo"
                 src="./images/hand.jpg"
                 alt="Hand with phone"
-                width="360"
-                height="300"
               />
             </li>
           </ul>
@@ -145,44 +145,51 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
-              <img class="team-photo"
+              <img
+                class="team-photo"
                 src="./images/mark.jpg"
                 alt="Photo our product designer"
-                width="264"
-                height="260"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-descr">Product Designer</p>
+              <div class="team-list-container">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-descr">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
-              <img class="team-photo"
+              <img
+                class="team-photo"
                 src="./images/tom.jpg"
                 alt="Photo of our Frontend Developer"
-                width="264"
-                height="260"
               />
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-descr">Frontend Developer</p>
+              <div class="team-list-container">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-descr">Frontend Developer</p>
+              </div>
             </li>
+            
             <li class="team-list-item">
-              <img class="team-photo"
+              <img
+                class="team-photo"
                 src="./images/camila.jpg"
                 alt="Photo of our Marketing"
-                width="264"
-                height="260"
               />
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-descr">Marketing</p>
+              <div class="team-list-container">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-descr">Marketing</p>
+              </div>
             </li>
+
             <li class="team-list-item">
-              <img class="team-photo"
+              <img
+                class="team-photo"
                 src="./images/daniel.jpg"
                 alt="Photo of our UI Designer"
-                width="264"
-                height="260"
+                
               />
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-descr">UI Designer</p>
+              <div class="team-list-container">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-descr">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -190,7 +197,9 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
         <p class="text-footer">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
