--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,15 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a href="./studio.html" target="_blank" class="site-link link current"
+              <a
+                href="./studio.html"
+                target="_blank"
+                class="site-link link "
                 >Studio</a
               >
             </li>
             <li class="site-nav-item">
-              <a href="./portfolio.html" target="_blank" class="site-link link"
+              <a href="./portfolio.html" target="_blank" class="site-link link current"
                 >Portfolio</a
               >
             </li>
@@ -55,127 +58,154 @@
     </header>
     <main>
       <section class="exampl-work">
-        <h1 class="visually-hidden">Our works</h1>
-        <ul class="filter-list list">
-          <li>
-            <button type="button" class="filter-btn">All</button>
-          </li>
-          <li>
-            <button type="button" class="filter-btn">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="filter-btn">App</button>
-          </li>
-          <li>
-            <button type="button" class="filter-btn">Design</button>
-          </li>
-          <li>
-            <button type="button" class="filter-btn">Design</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Our works</h1>
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <button type="button" class="filter-btn">All</button>
+            </li>
 
-        <ul class="exampl-list list">
-          <li>
-            <img
-              src="./images/app_interface.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Banking App Interface Concept</h3>
-            <p class="exampl-descr">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cash_payment_app.jpg"
-              alt="Process of Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Cashless Payment</h3>
-            <p class="exampl-descr">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation_app.jpg"
-              alt="Meditation App Interface"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Meditation App</h3>
-            <p class="exampl-descr">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi_service.jpg"
-              alt="Taxi service marketing"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Taxi Service</h3>
-            <p class="exampl-descr">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen_illus.jpg"
-              alt="Screen Illustrations for phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Screen Illustrations</h3>
-            <p class="exampl-descr">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online_courses.jpg"
-              alt="Online Courses marketing"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Online Courses</h3>
-            <p class="exampl-descr">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/inst_stories_concept.jpg"
-              alt="Instagram Stories Concept Design"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Instagram Stories Concept</h3>
-            <p class="exampl-descr">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/organic_food.jpg"
-              alt="Picture for Organic Food website"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Organic Food</h3>
-            <p class="exampl-descr">Web Site</p>
-          </li>
-          <li>
-            <img
-              src="./images/fresh_coffe.jpg"
-              alt="Picture for coffee house website"
-              width="360"
-              height="300"
-            />
-            <h3 class="exampl-subtitle">Fresh Coffee</h3>
-            <p class="exampl-descr">Web Site</p>
-          </li>
-        </ul>
+            <li>
+              <button type="button" class="filter-btn">Web Site</button>
+            </li>
+
+            <li class="filter-item">
+              <button type="button" class="filter-btn">App</button>
+            </li>
+
+            <li class="filter-item">
+              <button type="button" class="filter-btn">Design</button>
+            </li>
+
+            <li class="filter-item">
+              <button type="button" class="filter-btn">Design</button>
+            </li>
+          </ul>
+
+          <div class="exampl-container">
+            <ul class="exampl-list list">
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/app_interface.jpg"
+                  alt="Banking App Interface Concept"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Banking App Interface Concept</h3>
+                  <p class="exampl-descr">App</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/cash_payment_app.jpg"
+                  alt="Process of Cashless Payment"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Cashless Payment</h3>
+                  <p class="exampl-descr">Marketing</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/meditation_app.jpg"
+                  alt="Meditation App Interface"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Meditation App</h3>
+                  <p class="exampl-descr">App</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/taxi_service.jpg"
+                  alt="Taxi service marketing"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Taxi Service</h3>
+                  <p class="exampl-descr">Marketing</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/screen_illus.jpg"
+                  alt="Screen Illustrations for phone"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Screen Illustrations</h3>
+                  <p class="exampl-descr">Design</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/online_courses.jpg"
+                  alt="Online Courses marketing"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Online Courses</h3>
+                  <p class="exampl-descr">Marketing</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/inst_stories_concept.jpg"
+                  alt="Instagram Stories Concept Design"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Instagram Stories Concept</h3>
+                  <p class="exampl-descr">Design</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/organic_food.jpg"
+                  alt="Picture for Organic Food website"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Organic Food</h3>
+                  <p class="exampl-descr">Web Site</p>
+                </div>
+              </li>
+
+              <li class="exampl-item">
+                <img
+                  class="exampl-photo"
+                  src="./images/fresh_coffe.jpg"
+                  alt="Picture for coffee house website"
+                />
+                <div class="exampl-list-container">
+                  <h3 class="exampl-subtitle">Fresh Coffee</h3>
+                  <p class="exampl-descr">Web Site</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
