--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
               <button type="button" class="filter-btn">All</button>
             </li>
 
-            <li>
+            <li class="filter-item">
               <button type="button" class="filter-btn">Web Site</button>
             </li>
 
