--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
             </li>
 
             <li class="filter-item">
-              <button type="button" class="filter-btn">Design</button>
+              <button type="button" class="filter-btn">Marketing</button>
             </li>
           </ul>
 
