--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a
-                href="./studio.html"
-                target="_blank"
-                class="site-link link current"
-                >Studio</a
-              >
+              <a href="./index.html" class="site-link link current">Studio</a>
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" target="_blank" class="site-link link"
@@ -122,11 +117,7 @@
               />
             </li>
             <li class="work-item">
-              <img
-                class="work-photo"
-                src="./images/phone.jpg"
-                alt="Phone"
-              />
+              <img class="work-photo" src="./images/phone.jpg" alt="Phone" />
             </li>
             <li class="work-item">
               <img
@@ -166,7 +157,7 @@
                 <p class="team-descr">Frontend Developer</p>
               </div>
             </li>
-            
+
             <li class="team-list-item">
               <img
                 class="team-photo"
@@ -184,7 +175,6 @@
                 class="team-photo"
                 src="./images/daniel.jpg"
                 alt="Photo of our UI Designer"
-                
               />
               <div class="team-list-container">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
@@ -197,13 +187,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-text-container">
+          <a href="./index.html" class="logo"
+            ><span class="logo-accent">Web</span>Studio</a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
