--- a/portfolio.html
+++ b/portfolio.html
@@ -29,22 +29,16 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a
-                href="./studio.html"
-                target="_blank"
-                class="site-link link "
-                >Studio</a
-              >
+              <a href="./index.html" target="_blank" class="site-link link"
+                >Studio</a>
             </li>
             <li class="site-nav-item">
-              <a href="./portfolio.html" target="_blank" class="site-link link current"
-                >Portfolio</a
-              >
+              <a href="./portfolio.html" class="site-link link current"
+                >Portfolio</a>
             </li>
             <li class="site-nav-item">
               <a href="./contacts.html" target="_blank" class="site-link link"
-                >Contacts</a
-              >
+                >Contacts</a>
             </li>
           </ul>
         </nav>
@@ -205,13 +199,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-text-container">
+          <a href="./index.html" class="logo"
+            ><span class="logo-accent">Web</span>Studio</a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
